Introduce TimeSeriesFilter, improves filtering of time-series metadata.